--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,9 @@
 [[plugins]]
   package = "netlify-plugin-gatsby-cache"
+
+[[redirects]]
+  from = "/api/*"
+  to = "https://storecomponents.vtexcommercestable.com.br/api/:splat"
+  status = 200
+  force = true
+  headers = {Host = "storecomponents.vtexcommercestable.com.br"}
