--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@loadable/component": "^5.13.0",
     "@loadable/server": "^5.13.0",
-    "@vtex/gatsby-theme-vtex": "^0.1.0-alpha.13",
+    "@vtex/gatsby-theme-vtex": "0.1.1-alpha.0",
     "dotenv": "^8.2.0",
     "gatsby": "^2.23.12",
     "gatsby-image": "^2.4.7",
