--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "dependencies": {
+    "@bit/vtex.poc.rich-text": "^0.0.1",
     "@loadable/component": "^5.13.0",
     "@loadable/server": "^5.13.0",
     "@vtex/gatsby-theme-vtex": "^0.1.0-alpha.13",
