--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dotenv": "^8.2.0",
     "gatsby": "^2.23.12",
     "gatsby-image": "^2.4.7",
+    "gatsby-plugin-google-analytics": "^2.3.11",
     "gatsby-plugin-google-marketing-platform": "^0.1.21",
     "gatsby-plugin-manifest": "^2.4.11",
     "gatsby-plugin-netlify": "^2.3.5",
