--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gatsby-image": "^2.4.7",
     "gatsby-plugin-google-analytics": "^2.3.11",
     "gatsby-plugin-google-marketing-platform": "^0.1.21",
+    "gatsby-plugin-google-tagmanager": "^2.3.11",
     "gatsby-plugin-manifest": "^2.4.11",
     "gatsby-plugin-netlify": "^2.3.5",
     "gatsby-source-filesystem": "^2.3.13",
