--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "@vtex/gatsby-theme-vtex": "^0.9.0",
     "@vtex/store-ui": "^0.9.0",
     "gatsby": "^2.24.12",
