--- a/package.json
+++ b/package.json
@@ -5,14 +5,12 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@vtex/gatsby-theme-vtex": "^0.9.0",
-    "@vtex/store-ui": "^0.9.0",
     "gatsby": "^2.24.12",
     "gatsby-plugin-manifest": "^2.4.21",
     "gatsby-plugin-netlify": "^2.3.5",
     "gatsby-source-filesystem": "^2.3.23",
     "react": "^0.0.0-experimental-7f28234f8",
-    "react-dom": "^0.0.0-experimental-7f28234f8",
-    "theme-ui": "^0.3.1"
+    "react-dom": "^0.0.0-experimental-7f28234f8"
   },
   "devDependencies": {
     "@types/theme-ui": "^0.3.4",
