--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "dependencies": {
-    "@vtex/gatsby-theme-vtex": "0.13.2-alpha.1",
+    "@vtex/gatsby-theme-vtex": "^0.13.2-alpha.3",
     "@vtex/store-ui": "^0.13.0",
     "gatsby": "^2.24.12",
     "gatsby-plugin-manifest": "^2.4.21",
