--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "private": true,
   "version": "0.0.0",
   "dependencies": {
-    "@vtex/gatsby-plugin-graphql": "^0.36.0",
-    "@vtex/gatsby-theme-vtex": "^0.41.0",
-    "@vtex/store-ui": "^0.37.0",
+    "@vtex/checkout-ui": "0.43.0-alpha.2",
+    "@vtex/gatsby-plugin-graphql": "0.43.0-alpha.1",
+    "@vtex/gatsby-theme-vtex": "0.43.0-alpha.2",
+    "@vtex/store-ui": "0.43.0-alpha.0",
     "babel-preset-gatsby": "^0.5.5",
     "gatsby": "^2.24.39",
     "gatsby-plugin-manifest": "^2.4.21",
@@ -16,6 +17,7 @@
     "react-dom": "^0.0.0-experimental-7f28234f8"
   },
   "devDependencies": {
+    "@types/theme-ui": "^0.3.6",
     "@vtex/prettier-config": "^0.3.1",
     "@vtex/tsconfig": "^0.5.0",
     "eslint": "^7.7.0",
