--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "dependencies": {
     "@vtex/gatsby-plugin-graphql": "^0.44.0",
-    "@vtex/gatsby-theme-vtex": "^0.51.0-alpha.4",
+    "@vtex/gatsby-theme-vtex": "0.51.0-alpha.4",
     "@vtex/store-ui": "^0.51.0-alpha.3",
     "babel-preset-gatsby": "^0.5.5",
     "gatsby": "^2.24.54",
