--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.0",
   "dependencies": {
     "@vtex/gatsby-plugin-graphql": "^0.52.0",
-    "@vtex/gatsby-theme-vtex": "^0.60.1-alpha.22",
-    "@vtex/store-ui": "0.60.1-alpha.18",
+    "@vtex/gatsby-theme-vtex": "^0.61.0",
+    "@vtex/store-ui": "^0.61.0-alpha.test.3",
     "babel-preset-gatsby": "^0.5.5",
     "gatsby": "^2.24.63",
     "gatsby-plugin-manifest": "^2.4.21",
