--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "@vtex/gatsby-plugin-graphql": "^0.81.0",
     "@vtex/gatsby-plugin-i18n": "^0.81.0",
     "@vtex/gatsby-plugin-vtex-nginx": "^0.81.0",
-    "@vtex/gatsby-theme-vtex": "^0.81.0",
-    "@vtex/store-ui": "^0.81.0",
+    "@vtex/gatsby-source-vtex": "^0.82.0-alpha.1",
+    "@vtex/gatsby-theme-vtex": "^0.82.0-alpha.1",
+    "@vtex/store-ui": "^0.82.0-alpha.1",
     "babel-preset-gatsby": "^0.5.5",
     "gatsby": "^2.24.64",
     "gatsby-plugin-manifest": "^2.4.21",
