Test prerelease nginx plugin

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@vtex/gatsby-plugin-graphql": "^0.82.0",
     "@vtex/gatsby-plugin-i18n": "^0.81.0",
-    "@vtex/gatsby-plugin-vtex-nginx": "^0.81.0",
+    "@vtex/gatsby-plugin-vtex-nginx": "0.81.1-beta.2+ce4be04e",
     "@vtex/gatsby-source-vtex": "^0.82.0",
     "@vtex/gatsby-theme-vtex": "^0.91.0",
     "@vtex/store-ui": "^0.87.0",
