--- a/package.json
+++ b/package.json
@@ -3,11 +3,10 @@
   "private": true,
   "version": "0.0.0",
   "dependencies": {
-    "@vtex/gatsby-plugin-graphql": "^0.82.0",
-    "@vtex/gatsby-plugin-i18n": "^0.81.0",
-    "@vtex/gatsby-plugin-vtex-nginx": "^0.93.1-alpha.10",
-    "@vtex/gatsby-source-vtex": "^0.82.0",
-    "@vtex/gatsby-theme-vtex": "^0.93.1-alpha.21",
+    "@vtex/gatsby-plugin-graphql": "^0.94.0-alpha.2",
+    "@vtex/gatsby-plugin-i18n": "^0.94.0-alpha.2",
+    "@vtex/gatsby-plugin-vtex-nginx": "^0.94.0-alpha.2",
+    "@vtex/gatsby-theme-vtex": "^0.94.0-alpha.2",
     "@vtex/store-ui": "^0.87.0",
     "babel-preset-gatsby": "^0.5.5",
     "gatsby": "^2.24.64",
