--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "develop": "gatsby develop",
     "start": "npm run develop",
     "serve": "gatsby serve",
+    "docker:serve": "sed -i -e 's/\\$PORT/80/' public/nginx.conf && docker run --rm --name local_nginx -v \"$PWD/public/nginx.conf:/etc/nginx/nginx.conf\" -v \"$PWD/public:/etc/nginx/html\" -p 80:80 -it nginx:latest",
     "clean": "gatsby clean",
     "format": "prettier --write \"src/*.{ts,js,tsx,jsx,json}\"",
     "lint": "eslint --ext js,ts,jsx,tsx .",
