--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@vtex/gatsby-plugin-i18n": "^0.107.0",
     "@vtex/gatsby-plugin-theme-ui": "^0.106.0",
     "@vtex/gatsby-plugin-vtex-nginx": "^0.107.0",
-    "@vtex/gatsby-theme-vtex": "^0.108.1-alpha.0",
+    "@vtex/gatsby-theme-vtex": "^0.109.0",
     "@vtex/store-ui": "^0.107.0",
     "babel-preset-gatsby": "^0.5.5",
     "gatsby": "^2.24.64",
