--- a/netlify.toml
+++ b/netlify.toml
@@ -3,7 +3,7 @@
 
 [[redirects]]
   from = "/*"
-  to = "https://storetheme.vtex.com/:splat?workspace=nocache"
+  to = "https://storetheme.vtex.com/:splat"
   status = 200
   force = true
-  headers = {X-Forwarded-Host="storecomponents.myvtexprod.com", cache-control="no-cache", pragma="no-cache"}
+  headers = {X-Forwarded-Host="storecomponents.myvtexprod.com", cache-control="no-cache", pragma="no-cache", X-From="Netlify"}
