--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "private": true,
   "version": "0.0.0",
   "dependencies": {
-    "@vtex/gatsby-plugin-graphql": "^0.199.0",
-    "@vtex/gatsby-plugin-i18n": "^0.199.0",
-    "@vtex/gatsby-plugin-nginx": "^0.203.0-alpha.3",
-    "@vtex/gatsby-theme-store": "^0.203.0-alpha.5",
-    "@vtex/store-ui": "^0.202.0",
+    "@vtex/gatsby-plugin-graphql": "^0.203.0-alpha.7",
+    "@vtex/gatsby-plugin-i18n": "^0.203.0-alpha.7",
+    "@vtex/gatsby-plugin-nginx": "^0.203.0-alpha.7",
+    "@vtex/gatsby-theme-store": "^0.203.0-alpha.7",
+    "@vtex/store-ui": "^0.203.0-alpha.7",
     "babel-preset-gatsby": "^0.5.5",
     "gatsby": "^2.24.64",
     "gatsby-plugin-manifest": "^2.4.21",
