--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "dependencies": {
+    "@vtex/gatsby-plugin-cms": "^0.204.0-alpha.0",
     "@vtex/gatsby-plugin-graphql": "^0.203.0",
     "@vtex/gatsby-plugin-i18n": "^0.203.0",
     "@vtex/gatsby-plugin-nginx": "^0.203.0",
