--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@vtex/gatsby-plugin-graphql": "^0.203.0",
     "@vtex/gatsby-plugin-i18n": "^0.203.0",
     "@vtex/gatsby-plugin-nginx": "^0.203.0",
-    "@vtex/gatsby-theme-store": "^0.204.1-alpha.0",
+    "@vtex/gatsby-theme-store": "^0.204.1",
     "@vtex/store-ui": "^0.203.0",
     "babel-preset-gatsby": "^0.5.5",
     "gatsby": "^2.24.64",
