--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "private": true,
   "version": "0.0.0",
   "dependencies": {
-    "@vtex/gatsby-plugin-cms": "^0.208.0-alpha.2",
+    "@vtex/gatsby-plugin-cms": "^0.208.0",
     "@vtex/gatsby-plugin-graphql": "^0.203.0",
     "@vtex/gatsby-plugin-i18n": "^0.203.0",
     "@vtex/gatsby-plugin-nginx": "^0.203.0",
-    "@vtex/gatsby-theme-store": "^0.208.0-alpha.1",
+    "@vtex/gatsby-theme-store": "^0.208.0",
     "@vtex/store-ui": "^0.203.0",
     "babel-preset-gatsby": "^0.5.5",
     "gatsby": "^2.24.64",
