--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "dependencies": {
     "@vtex/gatsby-plugin-cms": "^0.208.0",
     "@vtex/gatsby-plugin-graphql": "^0.203.0",
-    "@vtex/gatsby-plugin-i18n": "^0.203.0",
+    "@vtex/gatsby-plugin-i18n": "^0.211.0-alpha.0",
     "@vtex/gatsby-plugin-nginx": "^0.203.0",
-    "@vtex/gatsby-source-vtex": "^0.210.0",
-    "@vtex/gatsby-theme-store": "^0.210.0",
-    "@vtex/store-ui": "^0.203.0",
+    "@vtex/gatsby-source-vtex": "^0.210.0-alpha.5",
+    "@vtex/gatsby-theme-store": "^0.211.0-alpha.0",
+    "@vtex/store-ui": "^0.211.0-alpha.0",
     "babel-preset-gatsby": "^0.5.5",
     "dotenv": "^8.2.0",
     "gatsby": "^2.24.64",
