--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "dependencies": {
     "@vtex/gatsby-plugin-cms": "^0.208.0",
     "@vtex/gatsby-plugin-graphql": "^0.203.0",
-    "@vtex/gatsby-plugin-i18n": "^0.211.0-alpha.1",
     "@vtex/gatsby-plugin-nginx": "^0.203.0",
+    "@vtex/gatsby-plugin-theme-ui": "^0.207.0",
     "@vtex/gatsby-source-vtex": "^0.210.0-alpha.5",
-    "@vtex/gatsby-theme-store": "^0.211.0-alpha.1",
-    "@vtex/store-ui": "^0.211.0-alpha.1",
+    "@vtex/gatsby-theme-store": "^0.211.0-alpha.2",
+    "@vtex/store-ui": "^0.211.0-alpha.2",
     "babel-preset-gatsby": "^0.5.5",
     "dotenv": "^8.2.0",
     "gatsby": "^2.24.64",
@@ -20,7 +20,7 @@
     "react-dom": "^0.0.0-experimental-7f28234f8"
   },
   "devDependencies": {
-    "@vtex/lighthouse-config": "^0.197.1",
+    "@vtex/lighthouse-config": "^0.211.0-alpha.2",
     "@vtex/prettier-config": "^0.3.5",
     "@vtex/tsconfig": "^0.5.5",
     "eslint": "^7.14.0",
