--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "@vtex/gatsby-plugin-nginx": "^0.207.0",
     "@vtex/gatsby-plugin-theme-ui": "^0.207.0",
     "@vtex/gatsby-source-vtex": "^0.210.0",
-    "@vtex/gatsby-theme-store": "^0.211.0-alpha.8",
-    "@vtex/store-ui": "^0.211.0-alpha.7",
+    "@vtex/gatsby-theme-store": "^0.211.0",
+    "@vtex/store-ui": "^0.211.0",
     "babel-preset-gatsby": "^0.5.5",
     "dotenv": "^8.2.0",
     "gatsby": "^2.24.64",
@@ -20,7 +20,7 @@
     "react-dom": "^0.0.0-experimental-7f28234f8"
   },
   "devDependencies": {
-    "@vtex/lighthouse-config": "^0.211.0-alpha.2",
+    "@vtex/lighthouse-config": "^0.211.0",
     "@vtex/prettier-config": "^0.3.5",
     "@vtex/tsconfig": "^0.5.5",
     "eslint": "^7.14.0",
