--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "dependencies": {
     "@vtex/gatsby-plugin-cms": "^0.217.1",
     "@vtex/gatsby-plugin-graphql": "^0.217.1",
-    "@vtex/gatsby-plugin-nginx": "^0.217.1",
+    "@vtex/gatsby-plugin-nginx": "^0.219.0-alpha.20",
     "@vtex/gatsby-plugin-theme-ui": "^0.217.1",
-    "@vtex/gatsby-source-vtex": "^0.217.1",
-    "@vtex/gatsby-theme-store": "^0.220.0",
+    "@vtex/gatsby-source-vtex": "^0.219.0-alpha.20",
+    "@vtex/gatsby-theme-store": "^0.219.0-alpha.20",
     "@vtex/store-ui": "^0.217.1",
     "babel-preset-gatsby": "^0.5.5",
     "dotenv": "^8.2.0",
