--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "private": true,
   "version": "0.2.0",
   "dependencies": {
-    "@vtex/gatsby-plugin-cms": "^0.222.1-alpha.1",
-    "@vtex/gatsby-plugin-graphql": "^0.222.1-alpha.1",
-    "@vtex/gatsby-plugin-nginx": "^0.222.1-alpha.1",
-    "@vtex/gatsby-source-vtex": "^0.222.1-alpha.1",
-    "@vtex/gatsby-theme-store": "^0.222.1-alpha.1",
-    "@vtex/store-ui": "^0.222.1-alpha.1",
+    "@vtex/gatsby-plugin-cms": "^0.223.1",
+    "@vtex/gatsby-plugin-graphql": "^0.221.0",
+    "@vtex/gatsby-plugin-nginx": "^0.221.0",
+    "@vtex/gatsby-source-vtex": "^0.223.1",
+    "@vtex/gatsby-theme-store": "^0.223.2-alpha.1",
+    "@vtex/store-ui": "^0.221.0",
     "babel-preset-gatsby": "^0.5.5",
     "dotenv": "^8.2.0",
     "gatsby": "^2.30.1",
