--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "private": true,
   "version": "0.2.0",
   "dependencies": {
-    "@vtex/gatsby-plugin-cms": "^0.230.0",
-    "@vtex/gatsby-plugin-graphql": "^0.230.0",
-    "@vtex/gatsby-plugin-nginx": "^0.230.0",
-    "@vtex/gatsby-source-vtex": "^0.233.0",
-    "@vtex/gatsby-theme-store": "^0.234.0",
-    "@vtex/store-ui": "^0.230.0",
+    "@vtex/gatsby-plugin-cms": "0.235.0-gatsby.2",
+    "@vtex/gatsby-plugin-graphql": "0.235.0-gatsby.3",
+    "@vtex/gatsby-plugin-nginx": "0.235.0-gatsby.5",
+    "@vtex/gatsby-source-vtex": "0.235.0-gatsby.1",
+    "@vtex/gatsby-theme-store": "0.235.0-gatsby.6",
+    "@vtex/store-ui": "0.235.0-gatsby.4",
     "babel-preset-gatsby": "^0.5.5",
     "dotenv": "^8.2.0",
-    "gatsby": "^2.30.1",
+    "gatsby": "^2.31.0",
     "gatsby-plugin-manifest": "^2.4.21",
     "gatsby-plugin-netlify": "^2.3.17",
     "gatsby-plugin-robots-txt": "^1.5.1",
