--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.2.0",
   "dependencies": {
     "@vtex/gatsby-plugin-cms": "^0.230.0",
+    "@vtex/gatsby-plugin-google-tag-manager": "0.1.0-alpha.2",
     "@vtex/gatsby-plugin-graphql": "^0.230.0",
     "@vtex/gatsby-plugin-nginx": "^0.230.0",
     "@vtex/gatsby-source-vtex": "^0.233.0",
