--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "@vtex/gatsby-plugin-google-tag-manager": "^0.248.0",
     "@vtex/gatsby-plugin-graphql": "^0.248.0",
     "@vtex/gatsby-plugin-nginx": "^0.248.0",
-    "@vtex/gatsby-source-vtex": "0.250.0-alpha.6",
-    "@vtex/gatsby-theme-store": "0.250.0-alpha.4",
+    "@vtex/gatsby-source-vtex": "^0.250.0",
+    "@vtex/gatsby-theme-store": "^0.250.0",
     "@vtex/store-ui": "^0.249.1",
     "babel-preset-gatsby": "^0.5.5",
     "dotenv": "^8.2.0",
