--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "private": true,
   "version": "0.2.0",
   "dependencies": {
-    "@vtex/gatsby-plugin-cms": "^0.253.0-alpha.0",
-    "@vtex/gatsby-plugin-google-tag-manager": "^0.253.0-alpha.0",
-    "@vtex/gatsby-plugin-graphql": "^0.253.0-alpha.0",
-    "@vtex/gatsby-plugin-nginx": "^0.253.0-alpha.0",
-    "@vtex/gatsby-source-vtex": "^0.253.0-alpha.0",
-    "@vtex/gatsby-theme-store": "^0.253.0-alpha.1",
-    "@vtex/store-ui": "^0.253.0-alpha.1",
+    "@vtex/gatsby-plugin-cms": "^0.253.0",
+    "@vtex/gatsby-plugin-google-tag-manager": "^0.253.0",
+    "@vtex/gatsby-plugin-graphql": "^0.253.0",
+    "@vtex/gatsby-plugin-nginx": "^0.253.0",
+    "@vtex/gatsby-source-vtex": "^0.253.0",
+    "@vtex/gatsby-theme-store": "^0.253.0",
+    "@vtex/store-ui": "^0.253.0",
     "babel-preset-gatsby": "^0.5.5",
     "dotenv": "^8.2.0",
     "gatsby": "^2.31.0",
@@ -17,7 +17,8 @@
     "gatsby-plugin-netlify": "^2.3.17",
     "gatsby-plugin-robots-txt": "^1.5.1",
     "react": "^0.0.0-experimental-7f28234f8",
-    "react-dom": "^0.0.0-experimental-7f28234f8"
+    "react-dom": "^0.0.0-experimental-7f28234f8",
+    "yarn": "^1.22.10"
   },
   "devDependencies": {
     "@vtex/lighthouse-config": "^0.237.0",
