--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "gatsby-plugin-netlify": "^2.3.17",
     "gatsby-plugin-robots-txt": "^1.5.1",
     "react": "^0.0.0-experimental-7f28234f8",
-    "react-dom": "^0.0.0-experimental-7f28234f8",
-    "yarn": "^1.22.10"
+    "react-dom": "^0.0.0-experimental-7f28234f8"
   },
   "devDependencies": {
     "@vtex/lighthouse-config": "^0.237.0",
