--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@vtex/gatsby-plugin-graphql": "^0.253.0",
     "@vtex/gatsby-plugin-nginx": "^0.253.0",
     "@vtex/gatsby-source-vtex": "^0.253.0",
-    "@vtex/gatsby-theme-store": "^0.253.0",
+    "@vtex/gatsby-theme-store": "^0.256.1-alpha.2",
     "@vtex/store-ui": "^0.253.1",
     "babel-preset-gatsby": "^0.5.5",
     "dotenv": "^8.2.0",
