--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "@vtex/gatsby-plugin-google-tag-manager": "^0.260.0",
     "@vtex/gatsby-plugin-graphql": "^0.260.0",
     "@vtex/gatsby-plugin-nginx": "^0.260.3",
-    "@vtex/gatsby-source-vtex": "^0.260.2",
-    "@vtex/gatsby-theme-store": "^0.260.0",
+    "@vtex/gatsby-source-vtex": "0.261.0-alpha.0",
+    "@vtex/gatsby-theme-store": "0.261.0-alpha.0",
     "@vtex/store-ui": "^0.260.0",
     "babel-preset-gatsby": "^0.5.5",
     "dotenv": "^8.2.0",
