--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "^7.14.0",
     "eslint-config-vtex-react": "^6.8.3",
     "husky": "^5.0.9",
+    "is-ci": "^2.0.0",
     "lint-staged": "^10.5.4",
     "prettier": "^2.2.0",
     "typescript": "^3.9.5"
@@ -45,7 +46,7 @@
     "format": "prettier --write \"**/*.{ts,js,tsx,jsx,json}\"",
     "lint": "eslint --ext js,ts,jsx,tsx .",
     "test:lhci": "lhci autorun",
-    "postinstall": "husky install"
+    "postinstall": "is-ci || husky install"
   },
   "lint-staged": {
     "*.{ts,js,tsx,jsx}": [
