dependabot | ignoring major updates

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,6 +8,12 @@ updates:
       timezone: 'America/Sao_Paulo'
     allow:
       - dependency-name: '@vtex/*'
+    ignored_updates:
+      - match:
+          update_type: 'semver:major'
+    automerged_updates:
+      - match:
+          update_type: 'semver:patch'
     open-pull-requests-limit: 5
     reviewers:
       - 'vtex/faststore'
