--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "version": "0.20.0",
   "dependencies": {
     "@vtex/gatsby-plugin-cms": "^0.261.0",
-    "@vtex/gatsby-plugin-google-tag-manager": "^0.266.3",
+    "@vtex/gatsby-plugin-google-tag-manager": "0.267.0-alpha.0",
     "@vtex/gatsby-plugin-graphql": "^0.266.3",
     "@vtex/gatsby-plugin-nginx": "^0.261.0",
-    "@vtex/gatsby-source-vtex": "^0.265.0",
-    "@vtex/gatsby-theme-store": "^0.266.3",
+    "@vtex/gatsby-source-vtex": "^0.261.0",
+    "@vtex/gatsby-theme-store": "0.267.0-alpha.0",
     "@vtex/store-ui": "^0.265.0",
     "babel-preset-gatsby": "^0.5.5",
     "dotenv": "^8.2.0",
