--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "@vtex/gatsby-plugin-google-tag-manager": "0.270.0",
     "@vtex/gatsby-plugin-graphql": "^0.270.0",
     "@vtex/gatsby-plugin-i18n": "^0.270.0",
-    "@vtex/gatsby-plugin-nginx": "^0.270.0",
+    "@vtex/gatsby-plugin-nginx": "0.272.0-alpha.0",
     "@vtex/gatsby-source-vtex": "^0.270.0",
-    "@vtex/gatsby-theme-store": "0.270.0",
+    "@vtex/gatsby-theme-store": "0.272.0-alpha.0",
     "@vtex/store-ui": "0.270.0",
     "babel-preset-gatsby": "^0.5.5",
     "dotenv": "^8.2.0",
