--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@vtex/gatsby-plugin-google-tag-manager": "0.274.0",
     "@vtex/gatsby-plugin-graphql": "^0.274.0",
     "@vtex/gatsby-plugin-i18n": "^0.274.0",
-    "@vtex/gatsby-plugin-nginx": "0.274.0",
+    "@vtex/gatsby-plugin-nginx": "0.274.1-beta.7+24a176cc",
     "@vtex/gatsby-source-vtex": "^0.274.0",
     "@vtex/gatsby-theme-store": "0.274.0",
     "@vtex/store-ui": "0.274.0",
