--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "@vtex/gatsby-plugin-google-tag-manager": "0.273.0",
     "@vtex/gatsby-plugin-graphql": "^0.273.0",
     "@vtex/gatsby-plugin-i18n": "^0.273.0",
-    "@vtex/gatsby-plugin-nginx": "0.273.0",
-    "@vtex/gatsby-source-vtex": "^0.273.0",
+    "@vtex/gatsby-plugin-nginx": "0.274.0-alpha.0",
+    "@vtex/gatsby-source-vtex": "0.274.0-alpha.0",
     "@vtex/gatsby-theme-store": "0.273.0",
     "@vtex/store-ui": "0.273.0",
     "babel-preset-gatsby": "^0.5.5",
