--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@vtex/gatsby-plugin-nginx": "0.275.0",
     "@vtex/gatsby-source-vtex": "0.275.0",
     "@vtex/gatsby-theme-store": "0.276.0",
+    "@vtex/sfj-functions": "^1.0.1",
     "@vtex/store-ui": "0.275.0",
     "babel-preset-gatsby": "^0.5.5",
     "csvtojson": "^2.0.10",
@@ -39,7 +40,7 @@
   },
   "license": "MIT",
   "scripts": {
-    "build": "gatsby build --log-pages",
+    "build": "mkdir -p public/ && sfj-functions . storecomponents && gatsby build --log-pages",
     "develop": "gatsby develop",
     "start": "npm run develop",
     "serve": "gatsby serve",
