--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "private": true,
   "version": "0.31.0",
   "dependencies": {
-    "@vtex/gatsby-plugin-cms": "0.279.0-beta.2",
-    "@vtex/gatsby-plugin-google-tag-manager": "^0.279.0-beta.6",
-    "@vtex/gatsby-plugin-graphql": "0.279.0-beta.8",
-    "@vtex/gatsby-plugin-i18n": "0.279.0-beta.2",
-    "@vtex/gatsby-plugin-nginx": "^0.279.0-beta.7",
-    "@vtex/gatsby-source-vtex": "0.279.0-beta.2",
-    "@vtex/gatsby-theme-store": "0.279.0-beta.8",
-    "@vtex/store-ui": "0.279.0-beta.3",
+    "@vtex/gatsby-plugin-cms": "0.280.0-alpha.0",
+    "@vtex/gatsby-plugin-google-tag-manager": "^0.280.0-alpha.0",
+    "@vtex/gatsby-plugin-graphql": "0.280.0-alpha.0",
+    "@vtex/gatsby-plugin-i18n": "0.280.0-alpha.0",
+    "@vtex/gatsby-plugin-nginx": "^0.280.0-alpha.0",
+    "@vtex/gatsby-source-vtex": "0.280.0-alpha.0",
+    "@vtex/gatsby-theme-store": "0.280.0-alpha.0",
+    "@vtex/store-ui": "0.280.0-alpha.0",
     "babel-preset-gatsby": "^1.1.0",
     "csvtojson": "^2.0.10",
     "dotenv": "^8.2.0",
