--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "private": true,
   "version": "0.31.0",
   "dependencies": {
-    "@vtex/gatsby-plugin-cms": "0.280.0-alpha.0",
-    "@vtex/gatsby-plugin-google-tag-manager": "^0.280.0-alpha.0",
-    "@vtex/gatsby-plugin-graphql": "0.280.0-alpha.0",
-    "@vtex/gatsby-plugin-i18n": "0.280.0-alpha.0",
-    "@vtex/gatsby-plugin-nginx": "^0.280.0-alpha.0",
-    "@vtex/gatsby-source-vtex": "0.280.0-alpha.0",
-    "@vtex/gatsby-theme-store": "0.280.0-alpha.0",
-    "@vtex/store-ui": "0.280.0-alpha.0",
+    "@vtex/gatsby-plugin-cms": "0.280.0",
+    "@vtex/gatsby-plugin-google-tag-manager": "^0.280.0",
+    "@vtex/gatsby-plugin-graphql": "0.280.0",
+    "@vtex/gatsby-plugin-i18n": "0.280.0",
+    "@vtex/gatsby-plugin-nginx": "^0.280.0",
+    "@vtex/gatsby-source-vtex": "0.280.0",
+    "@vtex/gatsby-theme-store": "0.280.0",
+    "@vtex/store-ui": "0.280.0",
     "babel-preset-gatsby": "^1.1.0",
     "csvtojson": "^2.0.10",
     "dotenv": "^8.2.0",
@@ -21,7 +21,7 @@
     "react-dom": "^0.0.0-experimental-7f28234f8"
   },
   "devDependencies": {
-    "@vtex/lighthouse-config": "^0.278.0",
+    "@vtex/lighthouse-config": "^0.280.0",
     "@vtex/prettier-config": "^0.3.5",
     "@vtex/tsconfig": "^0.5.5",
     "eslint": "^7.22.0",
