--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "version": "0.31.0",
   "dependencies": {
     "@vtex/gatsby-plugin-cms": "0.280.0",
-    "@vtex/gatsby-plugin-google-tag-manager": "^0.280.0",
+    "@vtex/gatsby-plugin-google-tag-manager": "0.282.0-alpha.1",
     "@vtex/gatsby-plugin-graphql": "0.280.0",
-    "@vtex/gatsby-plugin-i18n": "0.280.0",
-    "@vtex/gatsby-plugin-nginx": "^0.280.0",
+    "@vtex/gatsby-plugin-i18n": "0.282.0-alpha.1",
+    "@vtex/gatsby-plugin-nginx": "0.282.0-alpha.1",
     "@vtex/gatsby-source-vtex": "0.280.0",
-    "@vtex/gatsby-theme-store": "0.280.0",
-    "@vtex/store-ui": "0.280.0",
+    "@vtex/gatsby-theme-store": "0.282.0-alpha.1",
+    "@vtex/store-ui": "0.282.0-alpha.1",
     "babel-preset-gatsby": "^1.1.0",
     "csvtojson": "^2.0.10",
     "dotenv": "^8.2.0",
