--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@vtex/gatsby-plugin-google-tag-manager": "0.285.0",
     "@vtex/gatsby-plugin-graphql": "0.281.1",
     "@vtex/gatsby-plugin-i18n": "0.282.0",
-    "@vtex/gatsby-plugin-nginx": "0.282.0",
+    "@vtex/gatsby-plugin-nginx": "0.285.1-alpha.0",
     "@vtex/gatsby-source-vtex": "0.281.1",
     "@vtex/gatsby-theme-store": "0.285.1-alpha.1",
     "@vtex/store-ui": "0.282.0",
