--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "@vtex/gatsby-plugin-i18n": "0.282.0",
     "@vtex/gatsby-plugin-nginx": "0.286.0",
     "@vtex/gatsby-source-vtex": "0.286.0",
-    "@vtex/gatsby-theme-store": "0.286.0",
-    "@vtex/store-ui": "0.282.0",
+    "@vtex/gatsby-theme-store": "0.287.1-alpha.1",
+    "@vtex/store-ui": "0.287.1-alpha.1",
     "babel-preset-gatsby": "^1.1.0",
     "csvtojson": "^2.0.10",
     "dotenv": "^8.2.0",
