--- a/vtex.env
+++ b/vtex.env
@@ -5,4 +5,4 @@ GATSBY_EXPERIMENTAL_QUERY_CONCURRENCY=20
 GATSBY_CPU_COUNT=4
 
 # 🐞🐞 Uncomment for debugging final bundle 🐞🐞
-# GATSBY_STORE_PROFILING=true
+GATSBY_STORE_PROFILING=false
