--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "dependencies": {
     "@vtex/gatsby-plugin-cms": "0.290.0",
     "@vtex/gatsby-plugin-google-tag-manager": "0.290.0",
-    "@vtex/gatsby-plugin-graphql": "0.290.0",
+    "@vtex/gatsby-plugin-graphql": "0.291.0-alpha.4",
     "@vtex/gatsby-plugin-i18n": "0.290.0",
     "@vtex/gatsby-plugin-nginx": "0.290.0",
     "@vtex/gatsby-source-vtex": "0.290.0",
-    "@vtex/gatsby-theme-store": "0.291.0-alpha.3",
+    "@vtex/gatsby-theme-store": "0.291.0-alpha.4",
     "@vtex/store-ui": "0.290.0",
     "babel-preset-gatsby": "^1.1.0",
     "csvtojson": "^2.0.10",
