--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "babel-preset-gatsby": "^1.1.0",
     "csvtojson": "^2.0.10",
     "dotenv": "^8.2.0",
+    "draft-js": "^0.11.7",
+    "draft-js-export-html": "^1.4.1",
     "gatsby": "^3.1.2",
     "gatsby-plugin-manifest": "^3.1.0",
     "gatsby-plugin-robots-txt": "^1.5.1",
@@ -22,6 +24,7 @@
     "webpack-merge": "^5.7.3"
   },
   "devDependencies": {
+    "@types/draft-js": "^0.11.1",
     "@vtex/lighthouse-config": "^0.291.0",
     "@vtex/prettier-config": "^0.3.5",
     "@vtex/tsconfig": "^0.5.5",
