--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@vtex/gatsby-plugin-nginx": "0.294.0",
     "@vtex/gatsby-source-vtex": "0.294.1",
     "@vtex/gatsby-theme-store": "0.295.1",
-    "@vtex/store-ui": "0.294.0",
+    "@vtex/store-ui": "^0.294.0",
     "babel-preset-gatsby": "^1.1.0",
     "csvtojson": "^2.0.10",
     "dotenv": "^8.2.0",
