--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "private": true,
   "version": "0.52.0",
   "dependencies": {
-    "@vtex/gatsby-plugin-cms": "0.297.0",
-    "@vtex/gatsby-plugin-google-tag-manager": "0.297.0",
-    "@vtex/gatsby-plugin-graphql": "0.297.0",
-    "@vtex/gatsby-plugin-i18n": "0.297.0",
-    "@vtex/gatsby-plugin-nginx": "0.297.0",
-    "@vtex/gatsby-source-vtex": "0.297.0",
-    "@vtex/gatsby-theme-store": "0.297.0",
-    "@vtex/store-ui": "^0.297.0",
+    "@vtex/gatsby-plugin-cms": "0.298.0",
+    "@vtex/gatsby-plugin-google-tag-manager": "0.298.0",
+    "@vtex/gatsby-plugin-graphql": "0.298.0",
+    "@vtex/gatsby-plugin-i18n": "0.298.0",
+    "@vtex/gatsby-plugin-nginx": "0.298.0",
+    "@vtex/gatsby-source-vtex": "0.298.0",
+    "@vtex/gatsby-theme-store": "0.298.0",
+    "@vtex/store-ui": "^0.298.0",
     "babel-preset-gatsby": "^1.1.0",
     "csvtojson": "^2.0.10",
     "dotenv": "^8.2.0",
@@ -22,7 +22,7 @@
     "webpack-merge": "^5.7.3"
   },
   "devDependencies": {
-    "@vtex/lighthouse-config": "^0.297.0",
+    "@vtex/lighthouse-config": "^0.298.0",
     "@vtex/prettier-config": "^0.3.5",
     "@vtex/tsconfig": "^0.5.5",
     "eslint": "^7.22.0",
@@ -48,7 +48,8 @@
     "format": "prettier --write \"**/*.{ts,js,tsx,jsx,json}\"",
     "lint": "eslint --ext js,ts,jsx,tsx .",
     "test:lhci": "lhci autorun",
-    "postinstall": "is-ci || husky install"
+    "postinstall": "is-ci || husky install",
+    "update:vtex": "yarn upgrade -L --scope @vtex"
   },
   "lint-staged": {
     "*.{ts,js,tsx,jsx}": [
