--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "@vtex/gatsby-plugin-pixel-facebook": "0.318.1",
     "@vtex/gatsby-plugin-theme-ui": "0.318.1",
     "@vtex/gatsby-source-vtex": "0.318.1",
-    "@vtex/gatsby-theme-store": "0.318.1",
-    "@vtex/store-ui": "0.318.1",
+    "@vtex/gatsby-theme-store": "0.319.1-alpha.0",
+    "@vtex/store-ui": "0.319.1-alpha.0",
     "babel-preset-gatsby": "^1.1.0",
     "csvtojson": "^2.0.10",
     "dotenv": "^8.2.0",
