--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "private": true,
   "version": "0.74.0",
   "dependencies": {
-    "@vtex/gatsby-plugin-cms": "0.318.1",
-    "@vtex/gatsby-plugin-google-tag-manager": "0.318.1",
-    "@vtex/gatsby-plugin-graphql": "0.318.1",
-    "@vtex/gatsby-plugin-i18n": "0.318.1",
-    "@vtex/gatsby-plugin-nginx": "0.318.1",
-    "@vtex/gatsby-plugin-pixel-facebook": "0.318.1",
-    "@vtex/gatsby-plugin-theme-ui": "0.318.1",
-    "@vtex/gatsby-source-vtex": "0.318.1",
-    "@vtex/gatsby-theme-store": "0.318.1",
-    "@vtex/store-ui": "0.318.1",
+    "@vtex/gatsby-plugin-cms": "0.318.3-regionhydration.0",
+    "@vtex/gatsby-plugin-google-tag-manager": "0.318.3-regionhydration.0",
+    "@vtex/gatsby-plugin-graphql": "0.318.3-regionhydration.0",
+    "@vtex/gatsby-plugin-i18n": "0.318.3-regionhydration.0",
+    "@vtex/gatsby-plugin-nginx": "0.318.3-regionhydration.0",
+    "@vtex/gatsby-plugin-pixel-facebook": "0.318.3-regionhydration.0",
+    "@vtex/gatsby-plugin-theme-ui": "0.318.3-regionhydration.0",
+    "@vtex/gatsby-source-vtex": "0.318.3-regionhydration.0",
+    "@vtex/gatsby-theme-store": "0.318.3-regionhydration.0",
+    "@vtex/store-ui": "0.318.3-regionhydration.0",
     "babel-preset-gatsby": "^1.1.0",
     "csvtojson": "^2.0.10",
     "dotenv": "^8.2.0",
