--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-plugin-robots-txt": "^1.5.1",
     "react": "^0.0.0-experimental-7f28234f8",
     "react-dom": "^0.0.0-experimental-7f28234f8",
+    "ts-loader": "^9.1.1",
     "webpack-merge": "^5.7.3"
   },
   "devDependencies": {
