--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@vtex/gatsby-plugin-graphql": "^0.371.21",
     "@vtex/gatsby-plugin-i18n": "^0.371.21",
     "@vtex/gatsby-plugin-nginx": "^0.371.21",
+    "@vtex/gatsby-plugin-onesignal": "https://pkg.csb.dev/vtex/faststore/commit/141c7b08/@vtex/gatsby-plugin-onesignal",
     "@vtex/gatsby-plugin-performance": "^0.371.21",
     "@vtex/gatsby-plugin-pixel-facebook": "^0.371.21",
     "@vtex/gatsby-plugin-theme-ui": "^0.371.21",
